--- a/app/src/main/res/layout/custom_feed.xml
+++ b/app/src/main/res/layout/custom_feed.xml
@@ -6,7 +6,7 @@
     android:layout_height="wrap_content">
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <ImageView
             android:id="@+id/imageViewFeed"
@@ -23,14 +23,31 @@
             android:layout_marginTop="10dp"
             android:layout_marginEnd="10dp"
             android:orientation="vertical">
-
-            <TextView
-                android:id="@+id/textViewTitle"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Hello"
-                android:textColor="@color/colorBlack"
-                android:textSize="17sp" />
+                android:orientation="horizontal">
+                <TextView
+                    android:id="@+id/textViewTitle"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:text="Hello"
+                    android:layout_weight="8"
+                    android:textColor="@color/colorBlack"
+                    android:textSize="17sp" />
+                <TextView
+                    android:id="@+id/textViewOption"
+                    android:layout_weight="2"
+                    android:layout_width="0dp"
+                    android:padding="3dp"
+                    android:textSize="18sp"
+                    android:textColor="@color/colorBlack"
+                    android:text="@string/_8942"
+                    android:gravity="end"
+                    android:layout_height="wrap_content"
+                 />
+            </LinearLayout>
+
 
             <TextView
                 android:id="@+id/textViewDescription"
@@ -42,6 +59,7 @@
     </LinearLayout>
 
     </LinearLayout>
+
     <View
         android:layout_width="wrap_content"
         android:layout_marginTop="2dp"
